# contextQ

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FIRESTORE_BENEFITS.md  QUICKSTART.md  README.md
backend/: README.md  config.py  dependencies.py  main.py  notes.md  pyproject.toml  requirements.txt  reset_qdrant.py  responses.py  router.py  utils.py
backend/app/: __init__.py  config.py  main.py  responses.py
backend/app/api/: __init__.py  routes.py  schemas.py
backend/app/services/: __init__.py  cache.py  chunker.py  document.py  embeddings.py  firestore.py  query_analyzer.py  rag.py  vector_store.py
backend/app/utils/: __init__.py  helpers.py
backend/apps/chat/: __init__.py  chat_history.py  routes.py  session_helpers.py
backend/apps/documents/: __init__.py  routes.py
backend/apps/health/: __init__.py  routes.py
backend/apps/sessions/: __init__.py  routes.py
backend/chat/: __init__.py  routes.py
backend/chat/handlers/: __init__.py  clear_chat_history.py  (+2 more)
backend/db/: __init__.py  firestore.py
backend/documents/: __init__.py  routes.py
backend/health/: __init__.py  routes.py
backend/llm/: __init__.py  anthropic.py  base.py  service.py
backend/middleware/: __init__.py  rate_limit.py
backend/scripts/: reset_qdrant.py
backend/services/: __init__.py  chat_history.py  chunker.py  document.py  embedding_cache.py  embeddings.py  llm.py  rag.py  types.py  vector_store.py
backend/sessions/: __init__.py  helpers.py  routes.py
backend/tests/: __init__.py  conftest.py  test_chunker.py  test_document.py
(+73 files in other folders)
