[project]
name = "contextq"
version = "0.1.0"
description = "RAG-powered document chat system with transparent source attribution"
authors = [{ name = "Ivjot", email = "ivjot@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.40.0",
    "voyageai>=0.2.0",
    "qdrant-client>=1.12.0",
    "redis>=5.2.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
line-length = 88
exclude = [".venv", ".git", "__pycache__", "uploads"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

